<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shonar Bangla</string>
    <string name="action_settings">Settings</string>
    <string name="buy_tab_indicator">Buy</string>
    <string name="sell_tab_indicator">Sell</string>
    <string name="title_activity_buy_info_dialog">BuyInfoDialogActivity</string>
    <string name="product_name"></string>
    <string name="product_quantity"></string>
    <string name="product_description"></string>
    <string name="product_price"></string>
    <string name="location"></string>
    <string name="phone_number"></string>
    <string name="date"></string>
    <string name="p_name">Product</string>
    <string name="p_quantity">Quantity</string>
    <string name="p_desc">Detail</string>
    <string name="p_price">Price</string>
    <string name="p_loc">Location</string>
    <string name="phone_number1">Mobile NO</string>
    <string name="title_activity_splash">Shonar Bangla</string>
    <string name="call_button">Call</string>
    <string name="sell_button">Post Ad</string>
    <string name="upload_image">Add Image</string>
    <string name="ClearCookies">Shonar Bangla</string>
    <string name="ClearCookieQuestion">Do You want to Post this Ad?</string>
    <string name="PostiveYesButton">Yes</string>
    <string name="NegativeNoButton">No</string>
    <string name="AlartMessage">Your Infrmation is Illegal.Please Give valid Information.</string>
    <string name="okButtonText">OK</string>
    <string name="connectionError">Network Connecton Error</string>
    <string name="attention">Attention</string>
    <string name="success">Successfull</string>
    <string name="fail">Fail</string>
    <string name="registration_text">You must be register for post any Advertisment.</string>
    <string name="registration_phone">Mobile No </string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Re-type Password</string>
    <string name="registration_button">Registration</string>
    <string name="passwordlengthAlartMessage">Your password should be at least 8 charecter.</string>
    <string name="passwordMissmashAlartMessage">Your Given Both Password are not Same.Please Give Correct Password.</string>
    <string name="registrationSuccess">Your Registration Is Successfull.</string>
    <string name="login_button">Login</string>
    <string name="loginSuccess">You are Successfully Login.</string>
    <string name="logoutMessage">Really You want to Logout ?</string>
    <string name="logoutToast">You are Successfully Loged out.</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find Product</item>
        <item>Sell Product</item>
        <item>My Post</item>
        <item>FAQ</item>
        <item>SignUp</item>
        <item>login</item>
        <item>Logout</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_search</item>
        <item>@drawable/ic_post</item>
        <item>@drawable/ic_mypost</item>
        <item>@drawable/ic_faq</item>
        <item>@drawable/ic_signup</item>
        <item>@drawable/ic_login</item>
        <item>@drawable/ic_logout</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="language">Bangla</string>
    <string name="best">best</string>
    <string name="liked">liked</string>
    <string name="ratetohelpus">Rate to help us</string>
    <string name="loginToast">You Should Login. </string>
    <string name="loginmessage">For Post or see Your advertise You Should be login. </string>
    <string name="cancel">Cancel</string>
    <string name="post_login_message">For post any advertisement you should login.Do you want to login now ?</string>
    <string name="my_post_login_message">For See your post You Should login.Do you want to login now ? </string>
    <string name="do_login">Login</string>
    
    
    <string name="edit_button">Edit</string>
<string name="delete_button">Delete</string>

 <string name="deleteNotice">Are you surely want to delete this Advertisment ?</string> 
 <string name="deleteSuccessfullMessage">You are Successfully delete this Advertisment.</string> 
 <string name="deleteUnSuccessfullMessage">For Some Problem Delete is not Possible.</string> 
 
    
    <string-array name="product_array">
        <item>Rice</item>
        <item>পাট </item>
        <item>গম</item>
        <item>ভুট্টা</item>
        <item>আঁখ</item>
        <item>সবজি</item>
        <item>আলু</item>
        <item>আম</item>
        <item>কলা</item>
        <item>লিচু</item>
        <item>কাঁঠাল</item>
        <item>স্টবেরি</item>
        <item>নারিকেল</item>
        <item>বরই</item>
        <item>আনারস</item>
        <item>তরমুস</item>
        <item>পেয়ারা</item>
        <item>ডাল</item>
        <item>মরিচ</item>
    </string-array>
    <string-array name="devision_array">
        <item>Dhaka</item>
        <item>Barisal</item>
        <item>Khulna</item>
        <item>Rajshahi</item>
        <item>Chittagong</item>
        <item>Seylet</item>
        <item>Rangpur</item>
        <item>Mymansing</item>
    </string-array>

    <string name="title_activity_my_post_detail">My Post</string>

</resources>