<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

   
    
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginmessage"
        android:textColor="@android:color/holo_orange_dark"
        android:gravity="center_horizontal"
        android:paddingBottom="20dp"
        android:textSize="18dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
    <EditText
        android:id="@+id/etLoginPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registration_phone"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
        android:hint="@string/registration_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
         android:id="@+id/loginButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:textSize="25dp"
       android:background="@drawable/login_button_selector"
          android:text="@string/login_button" />

</LinearLayout>