<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    
    <ScrollView
                  android:id="@+id/scrollView1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content" >
                   <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical" >
                 
           <LinearLayout
                  android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2" > 
                <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:popupBackground="#94AAC3"
        android:layout_weight="1" />
                <Spinner
        android:id="@+id/locationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
          android:popupBackground="#94AAC3" 
        android:layout_weight="1" />
                </LinearLayout>
                    
                  <TextView
        android:id="@+id/selVersion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/productName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_box_selector"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/p_name" />
                
        <EditText
        android:id="@+id/producQuantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_box_selector"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:hint="@string/p_quantity" />

 

    <EditText
        android:id="@+id/productDescription"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@drawable/input_box_selector"
        android:layout_marginBottom="10dp"
        android:hint="@string/p_desc"/>

    <EditText
        android:id="@+id/productPrice"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@drawable/input_box_selector" 
        android:layout_marginBottom="10dp"
        android:hint="@string/p_price"/>
    
    

    <EditText
        android:id="@+id/contactNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:background="@drawable/input_box_selector"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone_number1"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"></LinearLayout>

    

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_add_image_button" />
        
     
    
    <Button
        android:id="@+id/btnSellingPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_selector"
        android:text="@string/sell_button"
        android:textColor="#FFF"
        android:textStyle="bold" />  
       </LinearLayout>
    
    </ScrollView>
    
    

</RelativeLayout>