<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BuyInfoDialog"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
     

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="3" 
        android:orientation="horizontal">
    
     <com.android.volley.toolbox.NetworkImageView
        android:id="@+id/thumbnailFull"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="8dp" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/product_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPNmae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text=""/>
    
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvPQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:text="30 kg "
        android:layout_weight="3" />
    
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_description"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price"
        android:layout_weight="3" />
    
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Location"
        android:layout_weight="3" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvPNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="phone number"
        android:layout_weight="3" />
    
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="4" 
        android:orientation="horizontal">
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textStyle="bold"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="date"
        android:layout_weight="3" />
    
    </LinearLayout>
    
    <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/call_button_selector"
        android:text="@string/call_button" 
        android:textColor="@android:color/white"
        />
    
    
       </LinearLayout>
    </ScrollView>


</LinearLayout>